<?xml version="1.0"?>
<package format="2">
  <name>tf2_tutorial_robot</name>
  <version>1.0.0</version>
  <description>Partial URDF description and Gazebo simulation of a simple diff-drive robot.</description>

  <maintainer email="damjan@romb-technologies.hr">Damjan Miklic</maintainer>
  <license>Apache</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>urdf_launch</exec_depend>
  <exec_depend>ros_gz</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
     <gazebo_ros gazebo_model_path="${prefix}/../"/>
  </export>

</package>
